--- a/package.json
+++ b/package.json
@@ -24,9 +24,9 @@
   },
   "homepage": "https://github.com/bguiz/avasta#readme",
   "devDependencies": {
-    "jest": "^19.0.2"
+    "jest": "^19.0.2",
+    "jest-object": "^0.0.1"
   },
   "dependencies": {
-    "jest-object": "^0.0.1"
   }
 }
